--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -234,6 +234,7 @@ a {
       z-index: 1;
       grid-area: grid-sidebar-left;
       flex-direction: column;
+      align-items: end;
       @media all and ($mobile) {
         gap: 0;
         align-items: center;
